--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
    <body>
     <h1> falconkun.github.io/portfolio/ </h1>
-    <img src="/falcon.png">
+    <img src="falcon.png">
     <p>
     <div>Hikaru Saito</div>
     <a href="https://github.com/falconkun">falconkun@github</a>
@@ -22,9 +22,9 @@
 
     <div>
       <a href="https://github.com/falconkun/zaitaku">
-        一定の周期クリックツールをPythonで作成
+        一定の周期でクリックするツール
       </a>
-      一定の周期クリックツールをPythonで作成
+      Teamsを永遠にオンラインにしておくツールをPythonで作成
     </div>
  
     <div>
