--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
    <body>
     <h1> falconkun.github.io/portfolio/ </h1>
-    <img src="falcon.png">
+    <img src="falcon.png" alt="ファルコンの画像" width="638" height="496">
     <p>
     <div>Hikaru Saito</div>
     <a href="https://github.com/falconkun">falconkun@github</a>
@@ -38,10 +38,9 @@
       <a href="https://github.com/tigerscave/falcon-scheme-dojo">
         Scheme練習
       </a>
-      Scheme手習い1章～9章の
+      Scheme手習い1章～9章の練習
     </div>
 
    </p>
   </body>
-  <script data-account="oIjcG8WKy0" src="https://cdn.userway.org/widget.js"></script>
  </html>
